memgraph_versioned_docs/version-2.3.0/connect-to-memgraph/overview.mdx
---
id: overview
title: Connect to Memgraph
sidebar_label: Connection methods overview
slug: /connect-to-memgraph
---

import Container from "@site/src/components/container-docs/container-docs";
import styles from "@site/src/pages/connect-to-memgraph-docs.module.css";
import useBaseUrl from '@docusaurus/useBaseUrl';
import ConnectButton from "@site/src/components/connect-button/connect-button";
export default function ConnectToMemgraph() {
    const imgFolder = 'img/connect-page/';
    const viaDriver = [
        {
            title: 'Python',
            img: useBaseUrl(imgFolder + 'python-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'python-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'python-unselected.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'python-selected.png'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/python'),
        },
        {
            title: 'C#',
            img: useBaseUrl(imgFolder + 'csharp-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'csharp-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'csharp-unselected.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'csharp-selected.png'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/c-sharp'),
        },
        {
            title: 'Rust',
            img: useBaseUrl(imgFolder + 'rust-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'rust-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'dark/rust-unselected-dm.svg'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/rust-selected-dm.png'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/rust'),
        },
        {
            title: 'Java',
            img: useBaseUrl(imgFolder + 'java-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'java-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'dark/java-unselected-dm.svg'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/java-selected-dm.svg'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/java'),
        },
        {
            title: 'GoLang',
            img: useBaseUrl(imgFolder + 'golang-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'golang-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'dark/golang-unselected-dm.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/golang-selected-dm.png'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/go'),
        },
        {
            title: 'PHP',
            img: useBaseUrl(imgFolder + 'php-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'php-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'dark/php-unselected-dm.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/php-selected-dm.png'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/php'),
        },
        {
            title: 'Ruby',
            img: useBaseUrl(imgFolder + 'ruby-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'ruby-selected.png'),
            imgDark: useBaseUrl(imgFolder + 'dark/ruby-unselected-dm.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/ruby-selected-dm.svg'),
            url: 'https://github.com/neo4jrb/neo4j'
        },
        {
            title: 'JavaScript',
            img: useBaseUrl(imgFolder + 'JS-unselected.png'),
            imgActive: useBaseUrl(imgFolder + 'JS-selected.svg'),
            imgDark: useBaseUrl(imgFolder + 'JS-unselected.png'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/JS-selected-dm.svg'),
            url: useBaseUrl('memgraph/connect-to-memgraph/drivers/javascript'),
        },
        {
            title: 'Haskell',
            img: useBaseUrl(imgFolder + 'haskell-unselected.svg'),
            imgActive: useBaseUrl(imgFolder + 'haskell-selected.svg'),
            imgDark: useBaseUrl(imgFolder + 'dark/haskell-unselected-dm.svg'),
            imgDarkActive: useBaseUrl(imgFolder + 'haskell-selected.svg'),
            url: 'https://github.com/zmactep/hasbolt',
        },
    ];
    const viaLab = {
            title: 'MemgraphLab',
            img: useBaseUrl(imgFolder + 'lab-unselected.svg'),
            imgActive: useBaseUrl(imgFolder + 'lab-selected.svg'),
            imgDark: useBaseUrl(imgFolder + 'dark/lab-unselected-dm.svg'),
            imgDarkActive: useBaseUrl(imgFolder + 'dark/lab-selected-dm.svg'),
            url: useBaseUrl('memgraph-lab/'),
        };
    const viaConsole = {
        title: 'mgconsole',
        img: useBaseUrl(imgFolder + 'mgconsole-unselected.svg'),
        imgActive: useBaseUrl(imgFolder + 'mgconsole-selected.svg'),
        imgDark: useBaseUrl(imgFolder + 'dark/mgconsole-unselected-dm.svg'),
        imgDarkActive: useBaseUrl(imgFolder + 'dark/mgconsole-selected-dm.svg'),
        url: useBaseUrl('memgraph/connect-to-memgraph/mgconsole'),
    };
    const viaWebsocket = {
        title: 'websocket',
        img: useBaseUrl(imgFolder + 'websocket-unselected.svg'),
        imgActive: useBaseUrl(imgFolder + 'websocket-selected.svg'),
        imgDark: useBaseUrl(imgFolder + 'dark/websocket-unselected-dm.svg'),
        imgDarkActive: useBaseUrl(imgFolder + 'dark/websocket-selected-dm.svg'),
        url: useBaseUrl('memgraph/connect-to-memgraph/websocket'),
    };
    return (
                <Container size="small">
                    <div className={styles.connectToMemgraph}>
                        <section>
                            <p>
                                Memgraph supports the <b><a href="https://www.opencypher.org">openCypher</a></b> query language which has been developed by <b><a href="https://neo4j.com">Neo4j</a></b>.
                                It is a declarative language developed specifically
                                for interaction with graph databases, which is currently going through a
                                vendor-independent standardization process.
                                There are multiple ways of executing openCypher queries against Memgraph and you can learn more about them below.
                            </p>
                        </section>
                        <section>
                            <h2>Connect via Memgraph Lab</h2>
                            <p>Memgraph Lab is a lightweight and intuitive <b>visual user interface</b> that enables you to execute Cypher queries and visualize graph data.</p>
                            <ConnectButton title={viaLab.title} url={viaLab.url} img={viaLab.img} imgActive={viaLab.imgActive} imgDark={viaLab.imgDark} imgDarkActive={viaLab.imgDarkActive} />
                        </section>
                        {/*
                            <section>
                                <h2>Connect via mgconsole</h2>
                                <p>A command-line interface for querying Memgraph.</p>
                                <div className={styles.connectToMemgraph__grid}>
                                    {viaConsole.map((item, i) => {
                                        return (
                                            <ConnectButton key={i} url={item.url} title={item.title} img={item.img} imgActive={item.imgActive} imgDark={item.imgDark} imgDarkActive={item.imgDarkActive} />
                                        );
                                    })}
                                </div>
                            </section>
                        */}
                        {
                            // Temporary image, a custom mgconsole image is needed
                        }
                        <section>
                            <h2>Connect via mgconsole</h2>
                            <p>A <b>command-line interface</b> for querying Memgraph.</p>
                            <ConnectButton title={viaConsole.title} url={viaConsole.url} img={viaConsole.img} imgActive={viaConsole.imgActive} imgDark={viaConsole.imgDark} imgDarkActive={viaConsole.imgDarkActive} />
                        </section>
                        <section>
                            <h2>Connect via Driver</h2>
                            <p>Connect to Memgraph from your favorite programming language. We support a wide range of drivers.</p>
                            <div className={styles.connectToMemgraph__grid}>
                                {viaDriver.map((item, i) => {
                                    return (
                                        <ConnectButton key={i} url={item.url} title={item.title} img={item.img} imgActive={item.imgActive} imgDark={item.imgDark} imgDarkActive={item.imgDarkActive} />
                                    );
                                })}
                            </div>
                        </section>
                        <section>
                            <h2>Connect via WebSocket</h2>
                            <p>Connect to Memgraph using a WebSocket connection.</p>
                            <ConnectButton title={viaWebsocket.title} url={viaWebsocket.url} img={viaWebsocket.img} imgActive={viaWebsocket.imgActive} imgDark={viaWebsocket.imgDark} imgDarkActive={viaWebsocket.imgDarkActive} />
                        </section>
                        <section>
                            <h2>Where to next?</h2>
                            <p>
                                To learn more about the <b>Cypher</b> language, visit the <b><a href={useBaseUrl('cypher-manual')}>Cypher manual</a></b> or <b><a href="https://playground.memgraph.com/">Memgraph Playground</a></b> for interactive guides.
                                For real-world examples of how to use Memgraph, we strongly suggest going
                                through one of the available <b><a href={useBaseUrl('memgraph/tutorials')}>Tutorials</a></b>. Details on what can be stored in Memgraph can be found in the article about <b><a href={useBaseUrl('memgraph/concepts/storage')}>Data storage</a></b>.
                            </p>
                        </section>
                    </div>
                </Container>
    );
}
